--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="my_pictures">Мои работы</string>
     <string name="all_pictures">Все</string>
     <string name="presets">Шаблоны</string>
-    <string name="pick_from_gallery">Выбрать фото из галереи</string>
+    <string name="send_to">Отправить фото</string>
     <string name="error_loading_presets">Не удалось загрузить шаблоны, попробуйте ещё раз</string>
     <string name="reload">Перезагрузить</string>
 
