Fixes, added image iconm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Postcard Editor</string>
+    <string name="app_name">Красивые сообщения</string>
     <string name="my_pictures">Мои работы</string>
     <string name="all_pictures">Все</string>
     <string name="presets">Шаблоны</string>
